# gphotos-sync

./: .gitignore  Cargo.toml  todo.txt
src/: config.rs  gauth.rs  gphotos.rs  hash.rs  iterdir.rs  main.rs  process.rs  upload.rs  utils.rs
src/commands/: authenticate.rs  mod.rs  upload.rs  watch.rs
src/lib/: config.rs  fswatcher.rs  gauth.rs  gphotos.rs  mod.rs  upload.rs
