[package]
name = "gphotos-sync"
version = "0.1.0"
authors = ["Bjørn Arnholtz <bjorn.arnholtz@gmail.com>"]
edition = "2018"

[dependencies]
open = "1.3.2"
hyper = { version = "0.13.0-alpha.4", default-features = false }
clap = { version = "2.33.0", default-features = false }
url = "2.1.0"
futures = { version = "0.3.1", default-features = false, features = ["alloc"] }
tokio = { version = "0.2.0-alpha.6", default-features = false, features = ["macros", "rt-current-thread"] }
percent-encoding = "2.1.0"
reqwest = { version = "0.10.0-alpha.2", default-features = false, features = ["json", "default-tls"] }
serde = { version = "1.0.102", default-features = false, features = ["derive", "alloc"] }
fasthash = "0.4.0"
serde_cbor = { version = "0.10.2", default-features = false, features = ["std", "alloc"]  }
chrono = { version = "0.4.9", default-features = false, features = ["serde", "clock"] }
serde_json = "1.0.41"
notify = "5.0.0-pre.1"
crossbeam-channel = "0.3.8"



# [profile.release]
# opt-level = 'z'
# codegen-units = 1
# panic = 'abort'
# lto = true
