[package]
name = "gphotos-sync"
version = "0.1.0"
authors = ["Bjørn Arnholtz <bjorn.arnholtz@gmail.com>"]
edition = "2018"

[dependencies]
open = "1.4.0"
hyper = { version = "0.14.10", default-features = false }
clap = { version = "2.33.3", default-features = false }
url = "2.1.1"
futures = { version = "0.3.5", default-features = true, features = ["std", "alloc"] }
tokio = { version = "0.2.22", default-features = false, features = ["macros", "sync"] }
percent-encoding = "2.1.0"
reqwest = { version = "0.10.8", default-features = false, features = ["json", "default-tls"] }
serde = { version = "1.0.115", default-features = false, features = ["derive", "alloc"] }
fasthash = "0.4.0"
serde_cbor = { version = "0.11.1", default-features = false, features = ["std", "alloc"] }
chrono = { version = "0.4.15", default-features = false, features = ["serde", "clock"] }
serde_json = "1.0.57"
notify = "5.0.0-pre.3"
crossbeam-channel = "0.4.4"



# [profile.release]
# opt-level = 'z'
# codegen-units = 1
# panic = 'abort'
# lto = true
